[metadata]
name = ctapipe_io_lst
description = ctapipe plugin for reading LST prototype files
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = LST Consortium
author_email = cassol@cppm.in2p3.fr
license = MIT


[tool:pytest]
minversion = 3.0
addopts = -v


[aliases]
test = pytest

[flake8]
max-line-length = 88
